<resources>
    <string name="app_name">Movie time</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_tv">TV</string>
    <string name="popular">Popular</string>
    <string name="movie">Movie</string>
    <string name="tv_series">TV Series</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trending">Trending</string>
    <string name="more_like_this">More Like This</string>
    <string name="recommendations">Recommendations</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="images">Images</string>
</resources>